--- a/index.html
+++ b/index.html
@@ -1,10 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Carlos Sánchez</title>
+    <meta name="theme-color" content="#8B5CF6" />
+    <meta
+      name="robots"
+      content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1"
+    />
+    <title>
+      Carlos Sánchez - DevOps Engineer | Full Stack Developer | AWS Cloud
+      Architect
+    </title>
+    <meta
+      name="description"
+      content="Ingeniero DevOps/SRE y Full Stack Developer con +4 años de experiencia en AWS, Terraform, Docker, CI/CD y React. Especializado en arquitecturas escalables y cloud-native."
+    />
   </head>
   <body>
     <div id="root"></div>
